--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 </style>
 <head>
-  <title>Lab 3 </title>
+  <title>OSU Storymap</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="please add">
